--- a/module/license-app/build.gradle
+++ b/module/license-app/build.gradle
@@ -8,7 +8,9 @@ version '1.0'
 repositories {
     mavenCentral()
 }
-
+jar {
+    enabled = true
+}
 dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'commons-logging', name: 'commons-logging', version: '1.1.1'
